SFD-5911 Update data fuzzy search files (#358)
SFD-5911 Update data fuzzy search files