@@ -22,12 +22,21 @@ public class ApiUtilsService implements ApiUtilsServiceInterface {
   private int minSearchTermLength;
 
   private final ApiRequestParams apiRequestParams;
+
   @Autowired
-  public ApiUtilsService(ApiRequestParams apiRequestParams){
+  public ApiUtilsService(ApiRequestParams apiRequestParams) {
     this.apiRequestParams = apiRequestParams;
   }
 
-  public void configureApiRequestParams(Integer fuzzLevel, String referralRole, Integer maxNumServicesToReturnFromEs, Integer maxNumServicesToReturn, Integer namePriority, Integer addressPriority, Integer postcodePriority, Integer publicNamePriority) {
+  public void configureApiRequestParams(
+      Integer fuzzLevel,
+      String referralRole,
+      Integer maxNumServicesToReturnFromEs,
+      Integer maxNumServicesToReturn,
+      Integer namePriority,
+      Integer addressPriority,
+      Integer postcodePriority,
+      Integer publicNamePriority) {
     apiRequestParams.setFuzzLevel(fuzzLevel);
     apiRequestParams.setFilterReferralRole(referralRole);
     apiRequestParams.setMaxNumServicesToReturnFromElasticsearch(maxNumServicesToReturnFromEs);
@@ -43,7 +52,7 @@ public class ApiUtilsService implements ApiUtilsServiceInterface {
   public List<String> sanitiseSearchTerms(final List<String> searchCriteria) {
     log.info("Sanitising search terms {}", searchCriteria);
     List<String> listFromString =
-        searchCriteria.stream().map(String::trim).toList();
+        searchCriteria.stream().map(String::trim).collect(Collectors.toList());
 
     List<String> sanitisedSearchTerms = new ArrayList<>();
 
@@ -82,7 +91,8 @@ public class ApiUtilsService implements ApiUtilsServiceInterface {
 
   @Override
   public List<String> removeBlankSpacesIn(final List<String> fields) {
-    final String POSTCODE_REGEX = "^[A-Za-z][A-HJ-Ya-hj-y]?\\d[A-Za-z0-9]? ?\\d[A-Za-z]{2}|[Gg][Ii][Rr] ?0[Aa]{2}$";
+    final String POSTCODE_REGEX =
+        "^[A-Za-z][A-HJ-Ya-hj-y]?\\d[A-Za-z0-9]? ?\\d[A-Za-z]{2}|[Gg][Ii][Rr] ?0[Aa]{2}$";
     Pattern pattern = Pattern.compile(POSTCODE_REGEX);
     return fields.stream()
         .filter(field -> pattern.matcher(field).matches())
